<resources>
    <string name="app_name">받은 메시지 함</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_write">메시지 작성</string>
    <string name="menu_receive">받은 메시지 함</string>
    <string name="menu_send">보낸 메시지 함</string>
    <string name="menu_modify">개인 정보 설정</string>
    <string name="menu_logout">로그아웃</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>