<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_write"
            android:icon="@drawable/edit"
            android:title="@string/menu_write" />
        <item
            android:id="@+id/nav_receive"
            android:icon="@drawable/multimedia"
            android:title="@string/menu_receive" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_baseline_send_24"
            android:title="@string/menu_send" />
    </group>
    <item android:title="@null">
        <menu>
            <item
                android:id="@+id/nav_modify"
                android:icon="@drawable/modify"
                android:title="@string/menu_modify" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>